--- a/clean.ipynb
+++ b/clean.ipynb
@@ -2160,7 +2160,7 @@
     }
    ],
    "source": [
-    "# Get names of indexes for which column Age has value 30\n",
+    "# Get names of indexes\n",
     "garage_op = project_data[project_data[\"Location Description\"] == \"CTA GARAGE / OTHER PROPERTY\" ].index\n",
     "tracks = project_data[project_data[\"Location Description\"] == \"CTA TRACKS - RIGHT OF WAY\" ].index\n",
     "cta_prop = project_data[project_data[\"Location Description\"] == \"CTA PROPERTY\" ].index\n",
